GUIDEDTOUR-13: Switch from Solr to HQL (#44)
- Replaced SolrQueryUtil with QueryUtil for executing HQL queries.
- Updated ToursManager and TasksManager to retrieve tours using HQL, excluding the templates.
- Removed SolrDocumentList and related Solr dependencies
- Updated unit tests for ToursManager and TasksManager
- Added tests for QueryUtil
- Updated TourProperty enum
- added justifications for code changes